# mexc-rs

./: Cargo.toml
src/spot/: mod.rs
src/spot/v3/: book_ticker.rs  mod.rs
src/spot/ws/: acquire_websocket.rs  message.rs  mod.rs  stream.rs  subscribe.rs  topic.rs
src/spot/ws/message/: deals.rs
