[package]
name = "mexc-rs"
version = "0.6.3"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/elertan/mexc-rs"
description = "Rust client for the mexc.com exchange"
keywords = ["mexc", "exchange", "api", "rest", "websocket"]

[features]
default = ["spot", "futures", "ws"]
spot = []
futures = []
ws = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
tracing = "0.1"
thiserror = "2.0"
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }
rust_decimal = { version = "1.37", features = ["serde"] }
async-trait = "0.1.89"
serde_path_to_error = "0.1.17"
dotenv = "0.15.0"
serde_urlencoded = "0.7.1"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
serde_repr = "0.1.20"
strum_macros = "0.27"
strum = "0.27"
async-stream = "0.3.6"
tracing-subscriber = "0.3.20"
anyhow = "1.0.99"
num = "0.4.3"
num-derive = "0.4.0"
num-traits = "0.2.19"
tokio-util = "0.7.16"
async-channel = "2.5"
serde_with = "3.14"
uuid = { version = "1.18.1", features = ["v4"] }
mexc-pb = { path = "../mexc-pb" }
prost = "0.14.1"
